# weekend-raytracer

./: .gitignore  CMakeLists.txt  README.md  benchmark.ipynb  benchmark.py
ppm-generator/: CMakeLists.txt  main.cpp
tracer/: .clang-format  .clangd  04_1_metal.ppm  04_2_metal.ppm  12_zoomedIn.ppm  12_zoomedOut.ppm  13_defocusBlur.ppm  CMakeLists.txt  benchmark.sh  camera.h  color.h  debug.sh  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  material.h  ray.h  release.sh  run.ps1  run.sh  sphere.h  tracer.h  vec3.h
tracer/tracer/: sphere.h
